Replace Arrays.asList with List.of for modern Java idioms
Updated main source files to use List.of() instead of Arrays.asList()
where appropriate. Preserved Arrays.asList() in SortGolfers and SortStrings
classes that use Collections.sort() since List.of() creates immutable lists.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>