@@ -7,7 +7,7 @@ import java.util.stream.Collectors;
 
 public class Ordering {
     public static void main(String[] args) {
-        List<Integer> ints = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+        List<Integer> ints = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
 
         // Collect doubles into a generated list
         List<Integer> doubles = ints.stream()
